Fixed river segment label from breaking out of box on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,6 +5,10 @@ body {
   font-size: 17px;
 }
 
+.label {
+  display: inline-block;
+  white-space: normal;
+}
 .label:hover { text-decoration: none; }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
